# self_delete-rs

./: Cargo.toml  README.md  app_icon.rc  app_icon.res  build.rs  resources.rc  version.rc  version.res
src/: main.rs
