[package]
name = "self_delete-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-sys ={version = "0.60", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_LibraryLoader", "Win32_Storage_FileSystem", "Win32_Security" ]}

[profile.release]
strip = true
opt-level = "s"
lto = true
debug=false
panic = "abort"